// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CouponCell correctly 1`] = `
<div class="r-cell r-cell--clickable r-coupon-cell"
     role="button"
     tabindex="0"
>
  <div class="r-cell__title">
    <span>
      Coupon
    </span>
  </div>
  <div class="r-cell__value r-coupon-cell__value">
    <span>
      No coupons
    </span>
  </div>
  <i class="r-badge__wrapper r-icon r-icon-arrow r-cell__right-icon">
  </i>
</div>
`;

exports[`should render CouponCell correctly with zero discount 1`] = `
<div class="r-cell r-cell--clickable r-coupon-cell"
     role="button"
     tabindex="0"
>
  <div class="r-cell__title">
    <span>
      Coupon
    </span>
  </div>
  <div class="r-cell__value r-coupon-cell__value r-coupon-cell__value--selected">
    <span>
      -¥ 0.00
    </span>
  </div>
  <i class="r-badge__wrapper r-icon r-icon-arrow r-cell__right-icon">
  </i>
</div>
`;

exports[`should render CouponCell with chosenCoupon correctly 1`] = `
<div class="r-cell r-cell--clickable r-coupon-cell"
     role="button"
     tabindex="0"
>
  <div class="r-cell__title">
    <span>
      Coupon
    </span>
  </div>
  <div class="r-cell__value r-coupon-cell__value r-coupon-cell__value--selected">
    <span>
      -¥ 1.50
    </span>
  </div>
  <i class="r-badge__wrapper r-icon r-icon-arrow r-cell__right-icon">
  </i>
</div>
`;
